RESOLVED FIXED104261
[Win] Crash when saving history with no items in it.
https://bugs.webkit.org/show_bug.cgi?id=104261
Summary [Win] Crash when saving history with no items in it.
peavo
Reported 2012-12-06 06:57:21 PST
When calling WebHistory::saveToURL() to save history, an access violation occurs if there are no history items.
Attachments
Patch (1.14 KB, patch)
2012-12-06 07:02 PST, peavo
no flags
peavo
Comment 1 2012-12-06 07:02:45 PST
Darin Adler
Comment 2 2013-01-15 15:32:29 PST
Comment on attachment 178008 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=178008&action=review > Source/WebKit/win/WebHistory.cpp:384 > + if (!data.get()) Should be able to write just if (!data) without the get().
WebKit Review Bot
Comment 3 2013-01-15 15:46:38 PST
Comment on attachment 178008 [details] Patch Clearing flags on attachment: 178008 Committed r139801: <http://trac.webkit.org/changeset/139801>
WebKit Review Bot
Comment 4 2013-01-15 15:46:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.