Crash when saving history with no items in it. https://bugs.webkit.org/show_bug.cgi?id=104261

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-01-15
Reviewed by Darin Adler.

* WebHistory.cpp:
(WebHistory::saveHistoryGuts): Added null pointer check

Canonical link: https://commits.webkit.org/125184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139801 268f45cc-cd09-0410-ab3c-d52691b4dbfc